# s3-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
src/s3_sample/: cli.py  csv.py  utils.py
tests/: test_console.py
