[tool.poetry]
name = "s3-sample"
version = "0.1.0"
description = "A command line utility for sampling data from AWS S3"
authors = ["jdelorimier <delorimier16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
smart-open = "^5.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.0.2"}
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.5.0"

[tool.poetry.scripts]
s3-sample = "s3_sample.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["s3_sample"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
